@@ -10,8 +10,9 @@
 - Buffer plays any audio type now.
 - New output module: OpenAL
 - Bug fixes:
-  - broken frame fillup for non-signed 8 bit formats with correct zero (bug 2805665)
+  - Broken frame fillup for non-signed 8 bit formats with correct zero (bug 2805665)
   - Crash on invalid UTF-16 in ID3 tags fixed (thanks to Andy Hefner)
+  - Bad detection of separated UTF-16 strings in ID3 tags (bug 2834636).
 - Topic ID3 and UTF: Now we are more tolerant with UTF16, even accepting those broken tags that id3v2 produces (multiple conflicing BOMs).
 - Build system allows AltiVec on non-Macs now (don't enforce unsupported gcc flags).
 - Terminal control mode is more verbose (gives hint about pressing 'h').
